# HW_WEB_14

./: .env.example  .gitignore  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 131d54d9bfa5_create_user_table.py  69e18fd235c6_user_table_upd.py  af48ba95648b_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
test/: conftest.py  test.db  test_contacts.py  test_users.py
